# hh-vacancies-project-clean

./: .env_template  .gitignore  README.md  create_db.sql  db_setup.py  main.py  pyproject.toml  vacancies.db
database/: create_db.py  db_manager.py  init_tables.py
src/: cli.py  db_manager.py  hh_api.py  load_data.py  main.py  storage.py  vacancy.py
tests/: test_db_manager.py  test_hh_api.py  test_storage.py  test_vacancy.py
