[project]
name = "hh-vacancies-project"
version = "0.1.0"
description = ""
authors = [
    {name = "makhailya", email = "makhailya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.11.0"
isort = "^7.0.0"
autoflake = "^2.3.1"

[tool.flake8]
max-line-length = 88  # Установлено 122 символа
exclude = ".git,__pycache__,docs/source/conf.py,build,dist"

[tool.black]
line-length = 88  # Согласованная длина для Black

[tool.isort]
line_length = 88  # Согласованная длина для isort
profile = "black"  # Используем профиль black для совместимости
